--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Hola mi primera pagina en Git</h1>
+
+    <footer>
+        Yordan Verdugo 2022. Todos los derechos reservados.
+
+
+    </footer>
     
 </body>
 </html>
