--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <section id="carrusel">
             <div id="galeria" class="container">
                 <div class="me- col-12 col-md-12">
-                    <h1 class="display-1 fw-bold my-5">
+                    <h1 class="display-1 fw-bold my-5 text-center">
                         Mis otros trabajos
                         </div>
                     </h1>
